2001-10-28  Roland McGrath  <roland@frob.com>

	* hurd/hurdselect.c (_hurd_select): Check SELECT_RETURNED bit when
	packing results for a `poll' call.

2001-10-26  Ulrich Drepper  <drepper@redhat.com>

	* posix/fnmatch_loop.c: Recognize - at end of bracket expression
	correctly.
	* posix/tst-fnmatch.input: Add tests for - at beginning and end of
	bracket expression.

	* string/strxfrm.c [USE_IN_EXTENDED_LOCALE_MODEL]: Correctly get
	nrules value.
	* string/tst-strxfrm.c (test): Also test __strxfrm_l.

2001-10-24  H.J. Lu  <hjl@gnu.org>

	* sysdeps/generic/bits/dlfcn.h (DL_CALL_FCT): Cast to void *.
	Use __BEGIN_DECLS/__END_DECLS around prototypes.
	* sysdeps/mips/bits/dlfcn.h (DL_CALL_FCT): Likewise.

2001-10-21  Jim Meyering  <meyering@lucent.com>

	* malloc/obstack.c (_): Honor the setting of ENABLE_NLS.  Otherwise,
	this code would end up calling gettext even in packages built
	with --disable-nls.
	* posix/getopt.c (_): Likewise.
	* posix/regex.c (_): Likewise.

2001-10-26  Ulrich Drepper  <drepper@redhat.com>

	* resolv/gethnamaddr.c (gethostbyaddr): Use ip6.addr for reverse
	lookup not ip6.int.
	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyaddr_r): Likewise.
	Reported by Martin.v.Loewis@t-online.de [PR libc/2598].

2001-10-19  Jakub Jelinek  <jakub@redhat.com>

	* misc/sys/cdefs.h (__attribute_used__): Define.
	* elf/rtld.c (_dl_start): Add __attribute_used__.
	* elf/dl-runtime.c (fixup, profile_fixup): Likewise.

2001-10-25  Andreas Schwab  <schwab@suse.de>

	* stdlib/a64l.c: Expect least significant digit first.
	* stdlib/l64a.c: Produce least significant digit first.
	* stdlib/Makefile (tests): Add test-a64l.
	* stdlib/test-a64l.c: New file.
	Reported by Masaki Hasegawa <masaki-h@pp.iij4u.or.jp>.

2001-10-21  Ulrich Drepper  <drepper@redhat.com>

	* po/sk.po: Update from translation team.

2001-10-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/elf/start.S (_fp_hw): Define object type.

2001-10-18  Andreas Schwab  <schwab@suse.de>
